add swiper carousel, add content

--- a/src/styles/rules.scss
+++ b/src/styles/rules.scss
@@ -1,5 +1,6 @@
 $darkNavColor : #151515;
 $lightNavColor : #ffffff;
+$darkNavy : #263a49;
 $breakpoint-phones: 576px;
 $breakpoint-tablets: 768px;
 $breakpoint-desktops: 992px;
