--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,3 +4,7 @@
 @import './nav.scss';
 @import './carousel.scss';
 @import './content.scss';
+@import './breakpoints.scss';
+@import './recommended.scss';
+@import './newsletter.scss';
+@import './footer.scss';
