--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,15 +1,10 @@
 .nav{
     height: 90px;
-    width: 70%;
-    position: absolute;
     top:0;
-    left: 15%;
-    display: flex;
-    justify-content: center;
-    @media all and (max-width:$breakpoint-desktops){
-        width: 94%;
-        left:3%;
-    }
+    z-index:1000;
+    position:relative;
+    padding: 0 20px;
+
     &__mobile{
         display: none;
         @media (max-width: $breakpoint-tablets) { 
@@ -22,6 +17,8 @@
         display: flex;
         font-size: 1.5rem;
         align-items: center;
+        position: relative;
+        z-index: 100;
         @media all and (max-width:$breakpoint-tablets){
             display: none;
         }
