add items description

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -12,6 +12,7 @@
         width: 100%;
         display: block;
         margin: 0 auto;
+        margin-bottom: -30px;
         text-align:center;
         @media all and (max-width: $breakpoint-phones) { 
             .row{
@@ -22,9 +23,91 @@
        
     }
     &__item{
-        padding:10px;
+        margin-bottom: 30px;
+        position: relative;
+        &:hover{
+            .item-description{
+                display: none;
+            }
+            .item-details-to-buy{
+                display: flex;
+            }
+        }
         img{
             max-width: 100%;
+            margin-bottom: 27px;
+        }
+        &__hover{
+            display: none;
+            height: 104px;
+            flex-direction: column;
+            &__name{
+                text-align: left;
+                color:#454545;
+                font-size:1.3rem;
+                margin-bottom: 14px;
+            }
+            &__options{
+                display: flex;
+                flex-direction: row;
+                &__desc{
+                    width: 50%;
+                    font-size: 1.3rem;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    text-align: left;
+                }
+                &__icons{
+                    width: 50%;
+                    text-align: right;
+                    display:flex;
+                    justify-content: flex-end;
+                    img{
+                        &:last-of-type{
+                            margin-left: 24px;
+                            margin-right: 20px;
+                        }
+                    }
+                }
+            }
+        }
+        &__sale{
+            position: absolute;
+            left:35px;
+            top:20px;
+            width: 53px;
+            height: 24px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-transform: uppercase;
+            font-size: 1rem;
+            font-weight: bold;
+            border:2px solid $darkNavColor;
+        }
+        &__description{
+            text-align: left;
+            height: 104px;
+           margin: 0 auto;
+           max-width: 309px;
+           
+            &__info{
+                font-size: 1rem;
+                color:$darkNavColor;
+                font-weight: bold;
+                text-transform: uppercase;
+                margin-bottom: 12px;
+            }
+            &__name{
+                color:#454545;
+                font-size:1.3rem;
+                margin-bottom: 11px;
+            }
+            &__price{
+                color:$darkNavColor;
+                font-weight: bold;
+                font-size:1.3rem; 
+            }
         }
     }
     &__showMore{
@@ -34,7 +117,6 @@
         align-items: center;
         justify-content: center;
         &__button{
-            color:red;
             width: 136px;
             height: 48px;
             border:2px solid $darkNavColor;
