--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -46,6 +46,10 @@
             }
              @media all and (max-width:$breakpoint-phones){
                 padding:0;
+                &__list{
+                    margin: 0;
+                }
+            
             }
         }
         &__custom{
