add conditional content rendering

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,3 +9,5 @@
 @import './newsletter.scss';
 @import './footer.scss';
 @import './scroll-to-top.scss';
+@import './loader.scss';
+@import './failed.scss';
