--- a/src/styles/loader.scss
+++ b/src/styles/loader.scss
@@ -1,7 +1,10 @@
 .loader{
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
+    left: 50%;
+    transform: translateX(-50%);
     &__item{
         width: 100px;
         height: 100px;
